--- a/css/style.css
+++ b/css/style.css
@@ -2637,9 +2637,10 @@ a:hover{
 }
 
 .sidenav {
-  height: 40%; /* Full-height: remove this if you want "auto" height */
+  height: 70%; /* Full-height: remove this if you want "auto" height */
   width: 180px; /* Set the width of the sidebar */
-  position:sticky; /* Fixed Sidebar (stay in place on scroll) */
+  position:fixed; /* Fixed Sidebar (stay in place on 
+    scroll) */
   margin-top: 50px;
   margin-left: 50px;
   z-index: 1; /* Stay on top */
@@ -2658,5 +2659,5 @@ a:hover{
   text-decoration: none;
   font-size: 13px;
   color: #000;
-  display:flex;
+  display:block;
 }
